syntax = "proto3";

package obiente.cloud.billing.v1;

option go_package = "github.com/obiente/cloud/apps/shared/proto/obiente/cloud/billing/v1;billingv1";

import "google/protobuf/timestamp.proto";

service BillingService {
  // Create a Stripe Checkout Session for purchasing credits
  rpc CreateCheckoutSession(CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse);

  // Create a Payment Intent for purchasing credits using an existing payment method
  rpc CreatePaymentIntent(CreatePaymentIntentRequest) returns (CreatePaymentIntentResponse);

  // Create a Stripe Customer Portal session for managing billing
  rpc CreatePortalSession(CreatePortalSessionRequest) returns (CreatePortalSessionResponse);

  // Create a Setup Intent for collecting payment methods without a payment
  rpc CreateSetupIntent(CreateSetupIntentRequest) returns (CreateSetupIntentResponse);

  // Get billing account information for an organization
  rpc GetBillingAccount(GetBillingAccountRequest) returns (GetBillingAccountResponse);

  // Create or update billing account
  rpc UpdateBillingAccount(UpdateBillingAccountRequest) returns (UpdateBillingAccountResponse);

  // List payment methods for an organization
  rpc ListPaymentMethods(ListPaymentMethodsRequest) returns (ListPaymentMethodsResponse);

  // Attach a payment method to customer
  rpc AttachPaymentMethod(AttachPaymentMethodRequest) returns (AttachPaymentMethodResponse);

  // Detach a payment method from customer
  rpc DetachPaymentMethod(DetachPaymentMethodRequest) returns (DetachPaymentMethodResponse);

  // Set default payment method for customer
  rpc SetDefaultPaymentMethod(SetDefaultPaymentMethodRequest) returns (SetDefaultPaymentMethodResponse);

  // Get payment intent status
  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (GetPaymentStatusResponse);

  // List invoices for an organization
  rpc ListInvoices(ListInvoicesRequest) returns (ListInvoicesResponse);

  // Create a Stripe Checkout Session for DNS Delegation subscription ($2/month)
  rpc CreateDNSDelegationSubscriptionCheckout(CreateDNSDelegationSubscriptionCheckoutRequest) returns (CreateDNSDelegationSubscriptionCheckoutResponse);

  // Get DNS delegation subscription status for an organization
  rpc GetDNSDelegationSubscriptionStatus(GetDNSDelegationSubscriptionStatusRequest) returns (GetDNSDelegationSubscriptionStatusResponse);

  // Cancel DNS delegation subscription
  rpc CancelDNSDelegationSubscription(CancelDNSDelegationSubscriptionRequest) returns (CancelDNSDelegationSubscriptionResponse);

  // List all subscriptions for an organization
  rpc ListSubscriptions(ListSubscriptionsRequest) returns (ListSubscriptionsResponse);

  // Update subscription payment method
  rpc UpdateSubscriptionPaymentMethod(UpdateSubscriptionPaymentMethodRequest) returns (UpdateSubscriptionPaymentMethodResponse);

  // Cancel a subscription by ID
  rpc CancelSubscription(CancelSubscriptionRequest) returns (CancelSubscriptionResponse);

  // Pay a monthly bill prematurely (before due date)
  rpc PayBill(PayBillRequest) returns (PayBillResponse);

  // List monthly bills for an organization
  rpc ListBills(ListBillsRequest) returns (ListBillsResponse);

  // Generate the current bill early (before billing date)
  // This allows users to create and pay their current bill before their scheduled billing date
  rpc GenerateCurrentBill(GenerateCurrentBillRequest) returns (GenerateCurrentBillResponse);
}

message CreateCheckoutSessionRequest {
  string organization_id = 1;
  // Amount in cents ($0.01 units). Must be positive.
  int64 amount_cents = 2;
  // Optional: success URL (defaults to console URL)
  optional string success_url = 3;
  // Optional: cancel URL (defaults to console URL)
  optional string cancel_url = 4;
}

message CreateCheckoutSessionResponse {
  // Stripe Checkout Session ID
  string session_id = 1;
  // Stripe Checkout Session URL for redirect
  string checkout_url = 2;
}

message CreatePaymentIntentRequest {
  string organization_id = 1;
  // Amount in cents ($0.01 units). Must be positive.
  int64 amount_cents = 2;
  // Optional: payment method ID to use (defaults to customer's default payment method)
  optional string payment_method_id = 3;
}

message CreatePaymentIntentResponse {
  // Stripe Payment Intent ID
  string payment_intent_id = 1;
  // Stripe Payment Intent client secret for frontend confirmation
  string client_secret = 2;
}

message CreatePortalSessionRequest {
  string organization_id = 1;
  // Optional: return URL (defaults to console URL)
  optional string return_url = 2;
}

message CreatePortalSessionResponse {
  // Stripe Customer Portal Session URL for redirect
  string portal_url = 1;
}

message GetBillingAccountRequest {
  string organization_id = 1;
}

message GetBillingAccountResponse {
  BillingAccount account = 1;
}

message UpdateBillingAccountRequest {
  string organization_id = 1;
  optional string billing_email = 2;
  optional string company_name = 3;
  optional string tax_id = 4;
  optional Address address = 5;
  optional int32 billing_date = 6; // Day of month (1-31) when billing occurs
}

message UpdateBillingAccountResponse {
  BillingAccount account = 1;
}

message ListPaymentMethodsRequest {
  string organization_id = 1;
}

message ListPaymentMethodsResponse {
  repeated PaymentMethod payment_methods = 1;
}

message GetPaymentStatusRequest {
  string payment_intent_id = 1;
}

message GetPaymentStatusResponse {
  string status = 1; // "succeeded", "pending", "failed", "canceled"
  optional string error_message = 2;
}

message CreateSetupIntentRequest {
  string organization_id = 1;
  // Optional: return URL after setup completion
  optional string return_url = 2;
}

message CreateSetupIntentResponse {
  // Stripe Setup Intent client secret for frontend
  string client_secret = 1;
  // Setup Intent ID
  string setup_intent_id = 2;
}

message AttachPaymentMethodRequest {
  string organization_id = 1;
  string payment_method_id = 2;
}

message AttachPaymentMethodResponse {
  PaymentMethod payment_method = 1;
}

message DetachPaymentMethodRequest {
  string organization_id = 1;
  string payment_method_id = 2;
}

message DetachPaymentMethodResponse {
  // Success indicator
  bool success = 1;
}

message SetDefaultPaymentMethodRequest {
  string organization_id = 1;
  string payment_method_id = 2;
}

message SetDefaultPaymentMethodResponse {
  // Success indicator
  bool success = 1;
}

message ListInvoicesRequest {
  string organization_id = 1;
  // Optional: limit the number of invoices returned (default: 10, max: 100)
  optional int32 limit = 2;
}

message ListInvoicesResponse {
  repeated Invoice invoices = 1;
  // Whether there are more invoices available
  bool has_more = 2;
}

message Invoice {
  string id = 1;
  // Invoice number (human-readable)
  string number = 2;
  // Invoice status: "draft", "open", "paid", "uncollectible", "void"
  string status = 3;
  // Total amount in cents
  int64 amount_due = 4;
  // Amount paid in cents
  int64 amount_paid = 5;
  // Currency code (e.g., "usd")
  string currency = 6;
  // Invoice date
  google.protobuf.Timestamp date = 7;
  // Due date (if applicable)
  optional google.protobuf.Timestamp due_date = 8;
  // PDF download URL (if available)
  optional string invoice_pdf = 9;
  // Hosted invoice URL (if available)
  optional string hosted_invoice_url = 10;
  // Description or memo
  optional string description = 11;
}

message BillingAccount {
  string id = 1;
  string organization_id = 2;
  optional string stripe_customer_id = 3;
  string status = 4; // "ACTIVE", "INACTIVE", "PAST_DUE", etc.
  optional string billing_email = 5;
  optional string company_name = 6;
  optional string tax_id = 7;
  optional Address address = 8;
  optional int32 billing_date = 9; // Day of month (1-31) when billing occurs
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message PaymentMethod {
  string id = 1;
  string type = 2; // "card", "bank_account", etc.
  // Card details (if type is "card")
  optional CardDetails card = 3;
  bool is_default = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CardDetails {
  string brand = 1; // "visa", "mastercard", "amex", etc.
  string last4 = 2;
  int32 exp_month = 3;
  int32 exp_year = 4;
  optional string name = 5;
}

message Address {
  string line1 = 1;
  optional string line2 = 2;
  string city = 3;
  optional string state = 4;
  string postal_code = 5;
  string country = 6;
}

// DNS Delegation Subscription

message CreateDNSDelegationSubscriptionCheckoutRequest {
  string organization_id = 1;
  // Optional: success URL (defaults to console URL)
  optional string success_url = 2;
  // Optional: cancel URL (defaults to console URL)
  optional string cancel_url = 3;
}

message CreateDNSDelegationSubscriptionCheckoutResponse {
  string session_id = 1;
  string checkout_url = 2;
}

message GetDNSDelegationSubscriptionStatusRequest {
  string organization_id = 1;
}

message GetDNSDelegationSubscriptionStatusResponse {
  bool has_active_subscription = 1;
  string stripe_subscription_id = 2; // Empty if no subscription
  bool has_api_key = 3; // Whether organization has an active API key
  google.protobuf.Timestamp api_key_created_at = 4; // When API key was created (if exists)
  bool cancel_at_period_end = 5; // Whether subscription is scheduled to cancel
  google.protobuf.Timestamp current_period_end = 6; // When current billing period ends
  string api_key_description = 7; // Description of the API key (if exists)
}

message CancelDNSDelegationSubscriptionRequest {
  string organization_id = 1;
}

message CancelDNSDelegationSubscriptionResponse {
  bool success = 1;
  string message = 2; // Status message
  google.protobuf.Timestamp canceled_at = 3; // When subscription will be canceled (end of billing period)
}

message ListSubscriptionsRequest {
  string organization_id = 1;
}

message ListSubscriptionsResponse {
  repeated Subscription subscriptions = 1;
}

message Subscription {
  string id = 1;
  string status = 2; // "active", "canceled", "past_due", "unpaid", "trialing", etc.
  google.protobuf.Timestamp current_period_start = 3;
  google.protobuf.Timestamp current_period_end = 4;
  google.protobuf.Timestamp canceled_at = 5; // If subscription is canceled
  bool cancel_at_period_end = 6; // Whether subscription will cancel at period end
  int64 amount = 7; // Amount in cents
  string currency = 8;
  string interval = 9; // "month", "year", etc.
  int32 interval_count = 10; // Number of intervals
  string description = 11;
  google.protobuf.Timestamp created = 12;
}

message UpdateSubscriptionPaymentMethodRequest {
  string organization_id = 1;
  string subscription_id = 2;
  string payment_method_id = 3;
}

message UpdateSubscriptionPaymentMethodResponse {
  bool success = 1;
  Subscription subscription = 2;
}

message CancelSubscriptionRequest {
  string organization_id = 1;
  string subscription_id = 2;
}

message CancelSubscriptionResponse {
  bool success = 1;
  string message = 2; // Status message
  Subscription subscription = 3;
}

message PayBillRequest {
  string organization_id = 1;
  string bill_id = 2;
}

message PayBillResponse {
  bool success = 1;
  string message = 2; // Status message
  MonthlyBill bill = 3;
}

message ListBillsRequest {
  string organization_id = 1;
  // Optional: limit the number of bills returned (default: 10, max: 100)
  optional int32 limit = 2;
}

message ListBillsResponse {
  repeated MonthlyBill bills = 1;
  // Whether there are more bills available
  bool has_more = 2;
}

message MonthlyBill {
  string id = 1;
  string organization_id = 2;
  google.protobuf.Timestamp billing_period_start = 3;
  google.protobuf.Timestamp billing_period_end = 4;
  int64 amount_cents = 5;
  string status = 6; // "PENDING", "PAID", "FAILED", "CANCELLED"
  optional google.protobuf.Timestamp paid_at = 7;
  google.protobuf.Timestamp due_date = 8;
  // Usage breakdown (JSON string with cost breakdown)
  optional string usage_breakdown = 9;
  optional string note = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message GenerateCurrentBillRequest {
  string organization_id = 1;
}

message GenerateCurrentBillResponse {
  bool success = 1;
  string message = 2; // Status message
  MonthlyBill bill = 3; // The generated bill (or existing bill if one already exists)
  bool already_exists = 4; // Whether the bill already existed
}


